# rag-time-workshop

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
boilerplate/: loaders.py  main.py
demo/: main.py
sources/: artusi.txt  de_bello_gallico.txt
workshop/: loaders.py  main.py
